# psychic-telegram-bot

./: .env.local  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  entrypoint.sh  pyproject.toml
db/: schema.sql
db/migrator/: runner.sh
scripts/: local_db.sh
src/: __init__.py  main.py
src/api/: admin.py  health.py
src/chats/: __init__.py  repository.py
src/core/: bot.py  config.py  db.py  textnorm.py  time.py
src/health/: db.py
src/i18n/: messages.py
src/i18n/locales/: english.yaml  russian.yaml
src/tgbot/: announce_guard.py  handlers.py  scanner.py  types.py
src/welcome/: formatter.py  repository.py  service.py
