[project]
name = "psychic-telegram-bot"
version = "0.0.0"
requires-python = ">=3.12,<4.0"
description = "Telegram bot service that writes users names history and prints users names change."
readme = "README.md"
authors = [{ name = "oxaa.dev" }]
dependencies = [
  "fastapi>=0.114.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "SQLAlchemy>=2.0.30",
  "greenlet>=3.0.0",
  "asyncmy>=0.2.9",
  "python-telegram-bot[job-queue]>=21.0",
  "python-dotenv>=1.0.1",
  "gunicorn>=21.2.0",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.28.0",
  "ruff>=0.6.0",
  "black>=24.0",
  "mypy>=1.10.0",
  "types-requests>=2.32.0.20240905"
]

[tool.uvicorn]
factory = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["api", "core", "health", "welcome", "tgbot", "chats", "i18n"]

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
